2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmTestBase.cs:
	* RijndaelTest.cs: 勉強用実装の項目を削除

2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmTestBase.cs:
	* CamelliaTest.cs:
	* RijndaelTest.cs: 各種ブロック暗号モードのマルチブロックテストを追加

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmTestBase.cs:
	* CamelliaTest.cs:
	* RijndaelTest.cs: ECBマルチブロックテストを追加

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* DummyAlgorithm.cs: rev.1825で変更した基底クラスのインターフェイス変更を反映
	
2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* ecb_vt.txt:
	* ecb_e_m.txt:
	* ecb_vk.txt:
	* ecb_tbl.txt:
	* RijndaelTest.cs: RijndaelのECBテストを追加

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmTestBase.cs: IVのサイズ指定が不正だったのを修正

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* BlockCipherModeTest.cs: CBC, CFB, OFB, CTRブロック暗号モードのテストを追加

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* DummyAlgorithm.cs: 基底クラスのコンストラクタインターフェイス変更に対応

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* PaddingModeTest.cs: ブロック暗号モードをECBに明示的に設定

2006-12-18 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* BlockCipherModeTest.cs: 追加

2006-12-17  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* PaddingModeTest.cs: パディングのテストを追加
	* DummyAlgorithm.cs: キーとブロック長を64bitに変更

2006-12-10  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTest.cs:
	* SymmetricAlgorithmTestBase.cs:
	* t_camellia.txt: CamelliaのECBテストを追加

2006-11-27  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
